# mock-interview-api

./: .dockerignore  .gitignore  1.out  Dockerfile  README.md  TOOL_PROPERTIES_REVIEW.md  package-lock.json  pyproject.toml  requirements.txt  run_debug.py  run_debug_simple.py  run_with_log.sh  start_debug.py  start_with_log.py
app/: main.py
app/controllers/: ai_copilot_controller.py  auth_controller.py  candidate_interview_controller.py  candidate_interview_planner_controller.py  interview_controller.py  product_controller.py
app/core/: config.py  database.py  logging.py  security.py
app/dao/: __init__.py  ai_interaction_dao.py  ai_session_dao.py  base_dao.py  candidate_interview_dao.py  candidate_interview_planner_dao.py  product_dao.py  question_answers_dao.py  question_solution_dao.py  session_details_dao.py  transcript_dao.py  user_dao.py
app/entities/: __init__.py  interview_context.py  task_event.py  tool_properties.py  transcript_event.py
app/interview_playground/: __init__.py
app/middleware/: logging_middleware.py
app/models/: __init__.py  ai_interaction.py  ai_session.py  candidate_interview.py  candidate_interview_planner.py  enums.py  evaluation.py  evaluation_criteria.py  evaluation_feedback.py  evaluation_rubric.py  interview_question.py  invoice.py  knowledge_bank.py  mock_interview.py  order.py  payment.py  product.py  question_solution.py  service.py  session_details.py  transcript.py  user.py  workflow.py  workflow_step_knowledge_bank.py
app/sao/: __init__.py  daily_sao.py
app/schemas/: ai_copilot.py  auth_schemas.py  interview_schemas.py  product_schemas.py
app/services/: ai_budget_service.py  ai_interaction_capture_service.py  ai_proxy_service.py  candidate_interview_planner_service.py  candidate_interview_service.py  interview_bot.py  interview_completion_service.py  interview_context_service.py  pipecat_service.py  product_service.py  (+2 more)
config/: local.env  local.env.template  production.env
(+59 files in other folders)
