[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-interview-api"
version = "1.0.0"
description = "A Roundz Mock Interview API with Pipecat Integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "sqlmodel>=0.0.24",
    "asyncpg>=0.30.0",
    "httpx>=0.25.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "structlog>=25.4.0",
    "pydantic[email]>=2.11.7",
    "greenlet>=3.2.4",
    "pipecat-ai[google,silero,webrtc,deepgram]==0.0.84",
    "python-dotenv>=1.1.1",
    "opencv-python>=4.11.0",
    "loguru>=0.7.3",
    "aiortc>=1.11.0",
    "aioice>=0.10.1",
    "onnxruntime>=1.20.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "google-generativeai>=0.8.5",
    "google-ai-generativelanguage>=0.6.15",
    "deepgram-sdk>=4.7.0"
]

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__", "**/*.pyc", "**/venv", "**/node_modules"]
venvPath = "."
venv = "venv"
pythonVersion = "3.13"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
autoImportCompletions = true
autoSearchPaths = true
stubPath = "./typings"
reportMissingImports = "warning"
reportMissingTypeStubs = "information"
reportImportCycles = "warning"
reportUnusedImport = "information"
reportUnusedVariable = "information"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
